@@ -1,6 +1,6 @@
-Date: 2020-11-03
+Date: 2020-11-04
 Package: CHNOSZ
-Version: 1.3.6-85
+Version: 1.3.6-86
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
